<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:background="#fff"
    android:padding="8dp"
    android:id="@+id/container">

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        android:contentDescription="@string/thumbnail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:text="@string/title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/category"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/category"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:maxLines="2"
            android:text="@string/author"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="82dp"
            android:layout_height="26dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>