<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_update_statue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/lbMarkLue" />

        <Button
            android:id="@+id/btn_delete_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            android:text="@string/lbdeleteBook"
            android:textColor="@color/design_default_color_error" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_on_primary"
            android:text="@string/lbCancel"
            android:textColor="@color/colorGray" />
    </LinearLayout>
</LinearLayout>