<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="5dp"
    android:background="#fff"
    android:padding="8dp"
    android:id="@+id/container_mylibrary_recycler">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        android:contentDescription="@string/thumbnail"
        />

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_mylibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="3"
            android:text="@string/title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isbn_mylibrary"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text="@string/category"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/langue_mylibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/statue_mylibrary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:maxLines="1"
            android:text="@string/lbStatue"
            android:textSize="12sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_detail_mylibrary"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="0dp"
        android:layout_width="28dp"
        android:layout_height="11dp"
        android:background="@drawable/ic_more" />
</LinearLayout>