<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lbConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/avenir_lts_td_roman"
        android:text="@string/lbConnexion"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tfPassword"
        android:layout_width="266dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/avenir_lts_td_book"
        android:hint="@string/lbPassword"
        android:inputType="textPersonName|textPassword"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfLogin" />

    <EditText
        android:id="@+id/tfLogin"
        android:layout_width="266dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/avenir_lts_td_book"
        android:hint="@string/lbLogin"
        android:inputType="textPersonName"
        android:textColor="@color/colorGray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageMainActivity" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="271dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/avenir_lts_td_roman"
        android:text="@string/lbConnexion"
        android:textColor="@color/colorPureWhite"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorMessage" />

    <TextView
        android:id="@+id/lkPasswordForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_lts_td_book"
        android:text="@string/lkPasswordForgot"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/lkNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_lts_td_book"
        android:text="@string/lkNewAccount"
        android:textColor="@color/colorGray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lkPasswordForgot"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfPassword" />

    <TextView
        android:id="@+id/messageMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbConnexion" />

</androidx.constraintlayout.widget.ConstraintLayout>